Add todo list all with tests
